2004-01-10  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_finalize),
	(bacon_video_widget_open), (bacon_video_widget_close),
	(bacon_video_widget_set_media_device), (bacon_video_widget_new):
	Implementing set_media_device to use the prefered cdrom reader.

2004-01-10  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_vw_realized),
	(bacon_video_widget_vw_allocate),
	(bacon_video_widget_button_press),
	(bacon_video_widget_button_release),
	(bacon_video_widget_motion_notify_callback),
	(bacon_video_widget_new): Implementing DVD navigation.

2004-01-10  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls): Adding
	DVD playback in GStreamer bacon video widget. Fixes now need to be done
	in GStreamer for that work correctly.

2004-01-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: explicitely link against libX11 to avoid problems
	with crappy linkers (like the Solaris one) (Closes: #130894)

2004-01-10  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_idle_signal):
	the automatic resize on new stream should be of 1:1, apparently, any
	other size confuses users (Closes: #131026)

2004-01-09  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init),
	(bacon_video_widget_signal_idler), (got_found_tag),
	(got_video_size), (got_stream_length), (got_time_tick),
	(got_error), (bacon_video_widget_finalize),
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property): Implementing an AsyncQueue for
	GStreamer signals. That fixes the resizing/fullscreen.
	* src/gstvideowidget.c: (gst_video_widget_reorder_windows),
	(gst_video_widget_realize), (gst_video_widget_expose),
	(gst_video_widget_allocate), (gst_video_widget_class_init),