@@ -1,5 +1,11 @@
 2004-01-10  Julien MOUTTE  <julien@moutte.net>
 
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
+	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls):
+	Adding support for Audio CD playback in GStreamer backend.
+
+2004-01-10  Julien MOUTTE  <julien@moutte.net>
+
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_finalize),
 	(bacon_video_widget_open), (bacon_video_widget_close),
 	(bacon_video_widget_set_media_device), (bacon_video_widget_new):
